adjust generation label

--- a/assets/chat.html
+++ b/assets/chat.html
@@ -21,7 +21,7 @@
                         href="https://aka.amogsus.com/teams-export"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >https://aka.amogsus.com/teams-export</a
+                        >Microsoft Teams Chat Exporter</a
                     >.</span
                 >
             </footer>
